--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,5 +1,5 @@
 header {
-    background: #343a40; /* Color de fondo del header */
+    background: #833cbd; /* Color de fondo del header */
     color: white; /* Color del texto */
 }
 .main {
